banner: fix display on mobile

--- a/static/scss/ferme.scss
+++ b/static/scss/ferme.scss
@@ -264,6 +264,8 @@ h1 {
   overflow: hidden;
   @include until($tablet) {
     background-image: str-replace($ferme-banner-img-src, '.jpg', '_768.jpg');
+    background-position: center 0%;
+    background-size: unset;
   }
   @include tablet-only {
     background-image: str-replace($ferme-banner-img-src, '.jpg', '_1024.jpg');
@@ -278,7 +280,7 @@ h1 {
     background-image: $ferme-banner-img-src;
   }
   background-attachment: fixed;
-  background-position: top;
+  background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
 }
